content/_sass/partials/home/_intro.scss
.cwl-announcement {
  background-color: $cwl-red;
  color: $white;
  padding: 0 1rem;
  text-align: center;

  h3 {
    font-size: 1.5rem;
    line-height: 2;
  }
}

@include media-breakpoint-up(md) {
  .cwl-announcement {
    h3 {
      font-size: 1.75rem;
    }
  }

  .intro-container {
    display: flex;
    justify-content: space-around;
  }

  .intro-text {
    font-size: 20px;
    text-align: center;
    width: 34%;
  }
}

@include media-breakpoint-up(lg) {
  .intro-text {
    width: 40%;
  }
}

// .youtube-container {
//   max-width: 560px;
// }

.features-grid {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

@include media-breakpoint-up(md) {
  .features-grid {
    justify-content: space-around;
  }
}

.feature-item {
  align-items: center;
  box-shadow: 0 6px 15px #0000001a;
  display: flex;
  // flex-direction: column;
  // flex-wrap: wrap;
  flex-flow: column wrap;
  margin: 1rem;
  padding: 12px;
  text-align: center;
  width: 100%;

  img {
    height: 100px;
    width: 100px;
  }
}

@include media-breakpoint-up(md) {
  .feature-item {
    // flex-basis: 33%;
    flex-basis: 46%;
    margin: 1rem 0;
  }

  .feature-title {
    font-size: 1.3rem;
    // height: 6rem;
    height: 3rem;
  }
}

@include media-breakpoint-up(lg) {
  .feature-item {
    // flex-basis: 33%;
    flex-basis: 29%;
    // margin: 20px 0;
    margin: 1rem;
  }

  .feature-title {
    font-size: calc(1.3rem + 0.4vw);
    // height: 4.2rem;
    height: 4rem;
  }
}

// Twitter Feed
.twitter-feed {
  clear: both;
  width: 80%;
}

.twitter-icon {
  width: 1.25rem;
}

@include media-breakpoint-up(sm) {
  .twitter-feed {
    float: right;
    margin: 0 0 0 36px;
    width: initial;
  }
}

@include media-breakpoint-up(xl) {
  .twitter-feed {
    margin: 16px 0 0 36px;
  }
}

